# steam-leaderboards-finder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-dll.yml
original_dlls/: README.md  extract_exports.py  requirements.txt
src/: leaderboard_finder.h
src/exports/: version.h  version_runtime.asm  version_runtime.h  winhttp.h  winhttp_runtime.asm  winhttp_runtime.h  wininet.h  wininet_runtime.asm  wininet_runtime.h  winmm.h  winmm_runtime.asm  winmm_runtime.h
